# sales_tax_tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
receipts/: admin.py  api.py  models.py  urls.py  views.py
receipts/migrations/: 0001_initial.py
receipts/services/: ingest.py  llm.py  receipts.py  storage.py
receipts/tests/: test_api.py  test_api_upload.py  test_capture_e2e.py  test_ingest.py  test_models.py  test_project_settings.py  test_services_llm.py  test_services_storage.py  test_views.py
sales_tax_tracker/: api.py  asgi.py  context_processors.py  settings.py  test_settings.py  urls.py  wsgi.py
salt_tracker/: api.py  asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
static/: theme.css
static/receipts/: capture.css  capture.js  dashboard.css
templates/: base.html
templates/receipts/: _receipt_detail.html  capture.html  dashboard.html
templates/registration/: login.html
