[project]
name = "sales-tax-tracker"
version = "0.1.3"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "django>=5.1,<5.2",
    "django-htmx>=1.27",
    "django-ninja>=1.6.2",
    "gunicorn>=23",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "model-bakery>=1.23.4",
    "pre-commit>=3",
    "pytest>=8",
    "pytest-django>=4.9",
    "pytest-mock>=3.14",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "staticfiles", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["S106"]
"receipts/tests/*.py" = ["S101"]
"salt_tracker/settings.py" = ["S105"]
"salt_tracker/test_settings.py" = ["S105"]
