[project]
name = "sales-tax-tracker"
version = "0.2.1"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.14",
    "django>=5.2.14,<5.3",
    "django-htmx>=1.27",
    "django-ninja>=1.6.2",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "model-bakery>=1.23.4",
    "playwright>=1.60.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.1",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "staticfiles", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["S106"]
"receipts/tests/*.py" = ["S101"]
"receipts/tests/test_capture_e2e.py" = ["S101", "S310"]
"sales_tax_tracker/settings.py" = ["S105"]
"sales_tax_tracker/test_settings.py" = ["S105"]
